; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgp-pubenc.c_create_secmsg.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgp-pubenc.c_create_secmsg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32**, i32)* @create_secmsg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_secmsg(%struct.TYPE_3__* %0, i32** %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32** %1, i32*** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %10, align 4
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  store i32 %17, i32* %11, align 4
  store i32* null, i32** %12, align 8
  store i32* null, i32** %13, align 8
  store i32 0, i32* %9, align 4
  br label %18

18:                                               ; preds = %34, %3
  %19 = load i32, i32* %9, align 4
  %20 = load i32, i32* %11, align 4
  %21 = icmp slt i32 %19, %20
  br i1 %21, label %22, label %37

22:                                               ; preds = %18
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 2
  %25 = load i64*, i64** %24, align 8
  %26 = load i32, i32* %9, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i64, i64* %25, i64 %27
  %29 = load i64, i64* %28, align 8
  %30 = load i32, i32* %10, align 4
  %31 = zext i32 %30 to i64
  %32 = add nsw i64 %31, %29
  %33 = trunc i64 %32 to i32
  store i32 %33, i32* %10, align 4
  br label %34

34:                                               ; preds = %22
  %35 = load i32, i32* %9, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %9, align 4
  br label %18

37:                                               ; preds = %18
  %38 = load i32, i32* %11, align 4
  %39 = add nsw i32 %38, 3
  %40 = call i32* @px_alloc(i32 %39)
  store i32* %40, i32** %7, align 8
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 4
  %44 = load i32*, i32** %7, align 8
  %45 = getelementptr inbounds i32, i32* %44, i64 0
  store i32 %43, i32* %45, align 4
  %46 = load i32*, i32** %7, align 8
  %47 = getelementptr inbounds i32, i32* %46, i64 1
  %48 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %49 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %48, i32 0, i32 2
  %50 = load i64*, i64** %49, align 8
  %51 = load i32, i32* %11, align 4
  %52 = call i32 @memcpy(i32* %47, i64* %50, i32 %51)
  %53 = load i32, i32* %10, align 4
  %54 = lshr i32 %53, 8
  %55 = and i32 %54, 255
  %56 = load i32*, i32** %7, align 8
  %57 = load i32, i32* %11, align 4
  %58 = add nsw i32 %57, 1
  %59 = sext i32 %58 to i64
  %60 = getelementptr inbounds i32, i32* %56, i64 %59
  store i32 %55, i32* %60, align 4
  %61 = load i32, i32* %10, align 4
  %62 = and i32 %61, 255
  %63 = load i32*, i32** %7, align 8
  %64 = load i32, i32* %11, align 4
  %65 = add nsw i32 %64, 2
  %66 = sext i32 %65 to i64
  %67 = getelementptr inbounds i32, i32* %63, i64 %66
  store i32 %62, i32* %67, align 4
  %68 = load i32*, i32** %7, align 8
  %69 = load i32, i32* %11, align 4
  %70 = add nsw i32 %69, 3
  %71 = load i32, i32* %6, align 4
  %72 = call i32 @pad_eme_pkcs1_v15(i32* %68, i32 %70, i32 %71, i32** %12)
  store i32 %72, i32* %8, align 4
  %73 = load i32, i32* %8, align 4
  %74 = icmp sge i32 %73, 0
  br i1 %74, label %75, label %82

75:                                               ; preds = %37
  %76 = load i32, i32* %6, align 4
  %77 = mul nsw i32 %76, 8
  %78 = sub nsw i32 %77, 6
  store i32 %78, i32* %14, align 4
  %79 = load i32*, i32** %12, align 8
  %80 = load i32, i32* %14, align 4
  %81 = call i32 @pgp_mpi_create(i32* %79, i32 %80, i32** %13)
  store i32 %81, i32* %8, align 4
  br label %82

82:                                               ; preds = %75, %37
  %83 = load i32*, i32** %12, align 8
  %84 = icmp ne i32* %83, null
  br i1 %84, label %85, label %91

85:                                               ; preds = %82
  %86 = load i32*, i32** %12, align 8
  %87 = load i32, i32* %6, align 4
  %88 = call i32 @px_memset(i32* %86, i32 0, i32 %87)
  %89 = load i32*, i32** %12, align 8
  %90 = call i32 @px_free(i32* %89)
  br label %91

91:                                               ; preds = %85, %82
  %92 = load i32*, i32** %7, align 8
  %93 = load i32, i32* %11, align 4
  %94 = add nsw i32 %93, 3
  %95 = call i32 @px_memset(i32* %92, i32 0, i32 %94)
  %96 = load i32*, i32** %7, align 8
  %97 = call i32 @px_free(i32* %96)
  %98 = load i32, i32* %8, align 4
  %99 = icmp sge i32 %98, 0
  br i1 %99, label %100, label %103

100:                                              ; preds = %91
  %101 = load i32*, i32** %13, align 8
  %102 = load i32**, i32*** %5, align 8
  store i32* %101, i32** %102, align 8
  br label %103

103:                                              ; preds = %100, %91
  %104 = load i32, i32* %8, align 4
  ret i32 %104
}

declare dso_local i32* @px_alloc(i32) #1

declare dso_local i32 @memcpy(i32*, i64*, i32) #1

declare dso_local i32 @pad_eme_pkcs1_v15(i32*, i32, i32, i32**) #1

declare dso_local i32 @pgp_mpi_create(i32*, i32, i32**) #1

declare dso_local i32 @px_memset(i32*, i32, i32) #1

declare dso_local i32 @px_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
